Stop Values and Predictions form input elements overlapping #145

--- a/app/frontend/src/form/Editable.css
+++ b/app/frontend/src/form/Editable.css
@@ -5,7 +5,7 @@
 
 .editable_percentage
 {
-    width: 65px; /* Width 55 sufficient for a value of 0.00 when not bolded, but 65 needed to cope with bolded */
+    width: 70px; /* Width 70 needed to cope with "100" */
     display: inline-flex;
 }
 .editable_percentage .editable_field input[type="text"]
